<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="husky.note.huskynote.ui.LoginActivity"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/et_email"
            style="@style/LoginEditText"
            android:hint="@string/email"
            />
        <EditText
            android:id="@+id/et_password"
            style="@style/LoginEditText"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@id/et_email"
            android:layout_marginTop="@dimen/margin_other_16"
            />
        <EditText
            android:id="@+id/et_host_address"
            style="@style/LoginEditText"
            android:layout_below="@id/et_password"
            android:hint="@string/host_address"
            android:layout_marginTop="@dimen/margin_other_16"
            android:layout_marginBottom="@dimen/margin_other_16"
            android:scaleY="0"
            />
        <LinearLayout
            android:id="@+id/layout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginLeft="@dimen/margin_other_16"
            android:layout_marginRight="@dimen/margin_other_16"
            android:paddingTop="@dimen/margin_other_16"
            android:paddingBottom="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp">
                <Button
                    android:id="@+id/btn_sign_up"
                    style="@style/SignButton"
                    android:layout_marginRight="8dp"
                    android:text="@string/sign_up"/>
                <Button
                    android:id="@+id/btn_sign_in"
                    style="@style/SignButton"
                    android:layout_marginLeft="8dp"
                    android:text="@string/sign_in"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_below="@id/layout_btn"
                android:gravity="center"
                android:textColor="@color/lightGray"
                android:layout_marginTop="8dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_other_16"
                />
        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_login"
        android:src="@mipmap/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_other_16"/>

    <TextView
        android:id="@+id/tv_use_leanote_com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_leanote_com"
        android:textColor="@color/lightGray"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_other_16"/>
</RelativeLayout>
